# first_project_python

./: .gitignore  404.html  Readme.md  activate.ps1  mkdocs.yml  pyproject.toml
api/example/: index.html
docs/: getting-started.md  index.md  other.md  utility-scripts.md
docs/about-python/: build.md  dependence.md  venv.md  version.md
docs/api/: example.md
first_project/: __main__.py  index.py
first_project/src/: car.py  env.py  fibo.py
first_project/utils/: query.py
scripts/: check.py  format.py  sort_imports.py  start.py  test.py  type_check.py
search/: search_index.json
site/: index.html
site/about-python/dependence/: index.html
site/about-python/version/: index.html
site/getting-started/: index.html
site/other/: index.html
tests/: sample_test.py
tests/src/: fibo_test.py
utility-scripts/: index.html
